--- a/index.html
+++ b/index.html
@@ -405,13 +405,21 @@ class Tree {
 	//Reset previous clicks on Settings
 	globalSettings.settingsClickCount = 0;
 	if(item.type && item.type == 'folder'){
-		globalSettings.parentItem = globalSettings.currentItem ? globalSettings.currentItem : item.parent;
+		if (globalSettings.currentItem && globalSettings.currentItem.type === 'folder'){
+			globalSettings.parentItem = globalSettings.currentItem ? globalSettings.currentItem : item.parent;
+		}else{
+			globalSettings.parentItem = globalSettings.currentFolder;
+		}		
 		globalSettings.currentFolder = globalSettings.parentItem;
 	}else{
 		if (!globalSettings.parentItem){
 			globalSettings.parentItem = 'root';
 		}
-		globalSettings.currentFolder = globalSettings.parentItem;		
+		if (globalSettings.currentItem.type === 'folder' && globalSettings.currentItem.parent === globalSettings.parentItem){
+			globalSettings.parentItem = globalSettings.currentItem.name;
+		}else{
+			globalSettings.currentFolder = globalSettings.parentItem;
+		}
 	}
 	globalSettings.currentItem = item;
     if (globalSettings && globalSettings.adminMode){
