--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ class Tree {
     globalSettings.currentLevel = globalSettings.currentLevel ? globalSettings.currentLevel - 1 : 1;
     globalSettings.currentItem = globalSettings.parentItem;
     globalSettings.parentItem = globalSettings.currentItem.parent;
-    if (globalSettings.currentItem === 'root'){
+    if (globalSettings.currentItem === 'root' || globalSettings.parentItem === 'root'){
       loadSavedLevelsFromCache();
     }else{
       var item = globalSettings.currentItem;
