--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ class Tree {
 
     globalSettings.currentLevel = globalSettings.currentLevel ? globalSettings.currentLevel - 1 : 1;
     if (globalSettings.parentItem){
-      globalSettings.currentItem = globalSettings.parentItem.parent;//TODO: have to get object, here globalSettings.parentItem.parent is just string
+      globalSettings.currentItem = tree.find(globalSettings.parentItem.parent + (globalSettings.currentLevel-1)).value; //have to get object because here globalSettings.parentItem.parent is just string
       globalSettings.parentItem = globalSettings.currentItem.parent;
     }else{	  
       globalSettings.currentItem = globalSettings.currentItem.parent;
