--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@ value: ())
 			<img name="itemPhoto" id="itemPhoto" style="width: 50%; height: 50%; margin-top: 20px; border:0px"/>			
 			<input type="button" id="left-nav-img-search" value="Prev" onclick="fetchPrev()"/>
 			<input type="button" id="right-nav-img-search" value="Next" onclick="fetchNext()"/>
-			<input type="button" id="remove-picture" value="Remove" onclick="removePicture()"/>
+			<input type="button" id="remove-picture" value="X" onclick="removePicture()"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
