--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ value: ())
   }
 
   function removePicture(){
-    document.querySelector('#itemPhoto').value = '';
+    document.getElementById("itemPhoto").src = "";
   }
 </script>
 
