--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@ document.addEventListener('DOMContentLoaded', () => {
   <input type="file" multiple=true id="upload-files" onchange='voiceFilesUploaded(event)'/>
 </div>
 
-<div class="keyboard">
+<div class="keyboard" style="display:none">
     <!-- Number Row -->
     <div class="row">
         <button class="key">1</button>
