--- a/index.html
+++ b/index.html
@@ -1106,6 +1106,9 @@ document.addEventListener('DOMContentLoaded', () => {
                 typedText += " "; // Add a space for Space bar
             } else if (key !== "Caps") { // Ignore "Caps" key
                 typedText += key;
+            } else if (key ==='backspace') {
+              // Handle Backspace
+              typedText = typedText.slice(0, -1);
             }
 	    document.getElementById("textareaEle").value = typedText;
             console.log("Typed Text: " + typedText); // Display the typed text in the console
@@ -1172,42 +1175,43 @@ document.addEventListener('DOMContentLoaded', () => {
 	        <button class="key">8</button>
 	        <button class="key">9</button>
 	        <button class="key">0</button>
+		<button class="key backspace">Backspace</button>
 	    </div>
 	    <!-- Alphabet Row 1 -->
 	    <div class="row">
-	        <button class="key">Q</button>
-	        <button class="key">W</button>
-	        <button class="key">E</button>
-	        <button class="key">R</button>
-	        <button class="key">T</button>
-	        <button class="key">Y</button>
-	        <button class="key">U</button>
-	        <button class="key">I</button>
-	        <button class="key">O</button>
-	        <button class="key">P</button>
+	        <button class="key">q</button>
+	        <button class="key">w</button>
+	        <button class="key">e</button>
+	        <button class="key">r</button>
+	        <button class="key">t</button>
+	        <button class="key">y</button>
+	        <button class="key">u</button>
+	        <button class="key">i</button>
+	        <button class="key">o</button>
+	        <button class="key">p</button>
 	    </div>
 	    <!-- Alphabet Row 2 -->
 	    <div class="row">
-	        <button class="key">A</button>
-	        <button class="key">S</button>
-	        <button class="key">D</button>
-	        <button class="key">F</button>
-	        <button class="key">G</button>
-	        <button class="key">H</button>
-	        <button class="key">J</button>
-	        <button class="key">K</button>
-	        <button class="key">L</button>
+	        <button class="key">a</button>
+	        <button class="key">s</button>
+	        <button class="key">d</button>
+	        <button class="key">f</button>
+	        <button class="key">g</button>
+	        <button class="key">h</button>
+	        <button class="key">j</button>
+	        <button class="key">k</button>
+	        <button class="key">l</button>
 	    </div>
 	    <!-- Alphabet Row 3 -->
 	    <div class="row">
 	        <button class="key uppercase-toggle">Caps</button>
-	        <button class="key">Z</button>
-	        <button class="key">X</button>
-	        <button class="key">C</button>
-	        <button class="key">V</button>
-	        <button class="key">B</button>
-	        <button class="key">N</button>
-	        <button class="key">M</button>
+	        <button class="key">z</button>
+	        <button class="key">x</button>
+	        <button class="key">c</button>
+	        <button class="key">v</button>
+	        <button class="key">b</button>
+	        <button class="key">n</button>
+	        <button class="key">m</button>
 	        <button class="key enter">Enter</button>
 	    </div>
 	    <!-- Space Row -->
