--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 typedText += " "; // Add a space for Space bar
             } else if (key !== "Caps") { // Ignore "Caps" key
                 typedText += key;
-            } else if (key ==='backspace') {
+            } else if (key ==='Backspace') {
               // Handle Backspace
               typedText = typedText.slice(0, -1);
             }
